# glimpse

./: .gitignore  ARTICLE_TO_VIDEO_SPEC.md  README.md  main.py  pyproject.toml  requirements.txt
core/: ai_analysis.py  page_actions.py  scraper.py  site_handlers.py  tts_manager.py  video_assembler.py
glimpse/: main.py
glimpse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
glimpse/bg_music/: ffmpeg.txt
glimpse/core/: ai_analysis.py  page_actions.py  scraper.py  site_handlers.py  tts_manager.py  video_assembler.py
glimpse/prompts/: STT_spelling_corrector.md  script_writer.md
glimpse/utils/: helpers.py
prompts/: STT_spelling_corrector.txt  script_writer.txt
test_data/: ai_response.json  narration_full.wav.json
